--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
         </a>
     </div>
     <div class="col-md-3">
-        <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction" class="text-warning">
+        <a asp-area="Users" asp-controller="Reporting" asp-action="Index" class="text-warning">
             <div class="card divShadow">
                 <div class="card-status bg-warning br-tr-7 br-tl-7"></div>
                 <div class="card-body pnlHeight">
