--- a/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
@@ -402,11 +402,11 @@
             var sHtml = `<table id="tblTransfers" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
                                                             <thead class="bg-primary-gradient ms-auto divShadow">
                                                                 <tr>
-                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
+                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">#</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-10">Date</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20">Store From</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20">Store To</th>
-                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">Number of Assets</th>
+                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">Assets</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20">Status</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20 no-btn">Action</th>
                                                                 </tr>
@@ -474,11 +474,11 @@
             var sHtml = `<table id="tblTransfersIncoming" class="table text-nowrap mb-0 table-bordered border-top border-bottom project-list-main">
                                                             <thead class="bg-primary-gradient ms-auto divShadow">
                                                                 <tr>
-                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">S.No</th>
+                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">#</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-10">Date</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20">Store From</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20">Store To</th>
-                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">Number of Assets</th>
+                                                                    <th class="text-white bg-transparent border-bottom-0 w-5">Assets</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20">Status</th>
                                                                     <th class="text-white bg-transparent border-bottom-0 w-20 no-btn">Action</th>
                                                                 </tr>
