--- a/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/PreviewTransfer.cshtml
@@ -268,6 +268,7 @@
 @section scripts{
     <script>
         $(document).ready(function () {
+            hideMenu();
             $("#btnSubmit").on("click",(e)=>{
                 //e.preventDefault();
                 $("#btnSubmit").addClass("btn-loading btn-icon");
