--- a/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
@@ -142,7 +142,7 @@
                                         </div>
                                         <div class="row mb-2">
                                             <div class="col d-flex">
-                                                <a asp-area="Users" asp-controller="Verifications" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                <a asp-area="Users" asp-controller="Home" asp-action="UnderConstruction" class="dropdown-menu-item source-logo-container">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-list-check" viewBox="0 0 16 16">
                                                         <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
                                                     </svg>
@@ -150,7 +150,7 @@
                                                 </a>
                                             </div>
                                             <div class="col d-flex p-0">
-                                                <a asp-area="Users" asp-controller="Stores" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                <a asp-area="Users" asp-controller="Disposals" asp-action="Index" class="dropdown-menu-item source-logo-container">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="source-logo">
                                                         <g> <path fill="none" d="M0 0H24V24H0z" /> <path d="M19.562 12.098l1.531 2.652c.967 1.674.393 3.815-1.28 4.781-.533.307-1.136.469-1.75.469H16v2l-5-3.5 5-3.5v2h2.062c.088 0 .174-.023.25-.067.213-.123.301-.378.221-.601l-.038-.082-1.531-2.652 2.598-1.5zM7.737 9.384l.53 6.08-1.73-1-1.032 1.786c-.044.076-.067.162-.067.25 0 .245.177.45.41.492l.09.008H9v3H5.938c-1.933 0-3.5-1.567-3.5-3.5 0-.614.162-1.218.469-1.75l1.031-1.786-1.732-1 5.53-2.58zm6.013-6.415c.532.307.974.749 1.281 1.281l1.03 1.786 1.733-1-.53 6.08-5.532-2.58 1.732-1-1.031-1.786c-.044-.076-.107-.14-.183-.183-.213-.123-.478-.072-.631.11l-.052.073-1.53 2.652-2.599-1.5 1.53-2.652c.967-1.674 3.108-2.248 4.782-1.281z" /> </g>
                                                     </svg>
@@ -158,7 +158,7 @@
                                                 </a>
                                             </div>
                                             <div class="col d-flex">
-                                                <a asp-area="Users" asp-controller="Stores" asp-action="Index" class="dropdown-menu-item source-logo-container">
+                                                <a asp-area="Users" asp-controller="Reporting" asp-action="Index" class="dropdown-menu-item source-logo-container">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="source-logo bi bi-printer" viewBox="0 0 16 16">
                                                         <path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
                                                         <path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
