--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -84,6 +84,9 @@
                                     <table class="table row table-borderless">
                                         <tbody class="col-lg-12 col-xl-4 p-0">
                                             <tr>
+                                                <td><strong>Make :</strong> @Model.Asset.Make</td>
+                                            </tr>
+                                            <tr>
                                                 <td><strong>Asset Category :</strong> @Model.Asset.SubCategory.SubCategoryName</td>
                                             </tr>
                                             <tr>
@@ -94,6 +97,9 @@
                                             </tr>
                                         </tbody>
                                         <tbody class="col-lg-12 col-xl-4 p-0 border-top-0">
+                                            <tr>
+                                                <td><strong>Model :</strong> @Model.Asset.Model</td>
+                                            </tr>
                                             <tr>
                                                 <td><strong>Asset Name :</strong> @Model.Asset.Name</td>
                                             </tr>
@@ -106,6 +112,9 @@
 
                                         </tbody>
                                         <tbody class="col-lg-12 col-xl-4 p-0 border-top-0">
+                                            <tr>
+                                                <td><strong>Year :</strong> @Model.Asset.Year</td>
+                                            </tr>
                                             <tr>
                                                 <td><strong>Serial Number :</strong> @Model.Asset.SerialNo</td>
                                             </tr>
